commit tree a9f5bb8beb70d995501423358fb3dbb053c601ac

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,10 @@
             <span class="icon-bar"></span>
           </button>
         <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+        <a class="navbar-brand" href="<%= signin_url %>"/>Sign In</a>
+        <a class="navbar-brand" href="<%= signup_url %>"/>Sign Up</a>
+         
+
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -27,9 +31,17 @@
       </div>
     </div>
 
+
     <!-- content -->
     <div class="container"  role="main">
       <%= yield %>
+  
+    
+ 
     </div>
   </body>
+  <%= link_to("See attractions", attractions_path) %>
+  <%if current_user%>
+    <%= link_to("Log Out", signout_path) %>
+    <%end%>
 </html>
